<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.LoginActivity">
    <LinearLayout
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp"
            android:orientation="vertical" >
        <TextView
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_username"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/loginView"
                android:layout_marginStart="20dp"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_input_lightmode"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp">
            <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/hint_username"
                    style="@style/no_underline_editText"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical" >
        <TextView
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_password"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/loginView"
                android:layout_marginStart="20dp"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_input_lightmode"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
        >
            <EditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/hint_password"
                    style="@style/no_underline_editText"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:importantForAutofill="no"/>

        </LinearLayout>
    </LinearLayout>
    <TextView
            android:id="@+id/passwordHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textAppearance="@style/special_text"
           app:layout_constraintTop_toBottomOf="@id/passwordField"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
    />
    <LinearLayout
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/passwordHelp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
        <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                style="@style/button_style_lightmode"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textHelp"/>
        <TextView
                android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
                android:layout_marginStart="5dp"
            android:textAppearance="@style/special_text"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>