<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RegisterActivity">
    <LinearLayout
            android:id="@+id/backField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp" >
        <TextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAppearance="@style/special_text"
                android:text="@string/back"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:padding="5dp" />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backField">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textAppearance="@style/loginView"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_input_lightmode">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/email"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email"
                    style="@style/no_underline_editText"
                    android:importantForAutofill="no"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/usernameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailField"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_username"
                android:textAppearance="@style/loginView"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_input_lightmode">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/username"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:inputType="text"
                    android:hint="@string/hint_username"
                    style="@style/no_underline_editText"
                    android:importantForAutofill="no"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameField"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_password"
                android:textAppearance="@style/loginView"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_input_lightmode">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pwd"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password"
                    style="@style/no_underline_editText"
                    android:importantForAutofill="no"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:id="@+id/cityField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordField"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_city"
                android:textAppearance="@style/loginView"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_input_lightmode">
            <Spinner
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:entries="@array/cities"
                    android:background="@drawable/custom_input_lightmode"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/cityField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp" >
        <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/button_style_lightmode"
                android:text="@string/register"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>