<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".ui.Profile">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:id="@+id/imgField">
            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@mipmap/ic_launcher"
                app:cardCornerRadius="50dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/ic_launcher"
                    android:importantForAccessibility="no"/>
            </androidx.cardview.widget.CardView>
            <TextView
                    android:id="@+id/nameUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameUser"
                    android:textAppearance="@style/special_text"
                    style="@style/loginView"
                />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/themeField"
        app:layout_constraintTop_toBottomOf="@id/imgField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/theme"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:id="@+id/theme"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textAppearance="@style/loginView"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_info"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/themeField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        >
        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/theme"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/langue"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/loginView"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/langueInfo"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
